# wikisrv

./: Justfile  README.md  pyproject.toml  pyrightconfig.json
src/wikisrv/: app.py  cli.py  markdown.py
tests/: test_e2e_sample_wiki.py  test_server.py
tests/fixtures/sample_wiki/: index.md  log.md  open-questions.md  overview.md
tests/fixtures/sample_wiki/_meta/: aliases.yaml  page-registry.jsonl  source-registry.jsonl
tests/fixtures/sample_wiki/_meta/lint/: latest.md
tests/fixtures/sample_wiki/pages/analyses/: knowledge-base-gap-analysis.md
tests/fixtures/sample_wiki/pages/entities/: atlas-platform.md  northwind-labs.md
tests/fixtures/sample_wiki/pages/sources/: src-20260110-001-architecture-workshop.md  src-20260110-002-team-playbook.md  src-20260110-003-rollout-documents.md
tests/fixtures/sample_wiki/pages/timelines/: atlas-platform-rollout.md
tests/fixtures/sample_wiki/pages/topics/: capacity-planning.md  service-architecture.md  team-operating-rhythm.md
tests/fixtures/sample_wiki/raw/files/: src-20260110-003-rollout-documents.md
tests/fixtures/sample_wiki/raw/files/attachments/: download-manifest.json
tests/fixtures/sample_wiki/raw/notes/: src-20260110-001-architecture-workshop.md
tests/fixtures/sample_wiki/raw/web/: src-20260110-002-team-playbook.md
